Working on styling - top of the page

--- a/User-Interface-master/great-idea-website/index.html
+++ b/User-Interface-master/great-idea-website/index.html
@@ -28,10 +28,10 @@
       <a href="">Contact</a>
     </nav>
     <img class="nav logo" src="img/logo.png" alt="Great Idea! Company logo.">
-    </div>
+  </div>
 
     <!-- Header Graphic and Title-->
-    <div class: "headContentBox">
+    <div class ="headContentBox">
       <div class = "headContent headContentText">
           <h2>Innovation</h2>
           <h2>On</h2>
